--- a/pages/customCoffee/style.scss
+++ b/pages/customCoffee/style.scss
@@ -6,25 +6,18 @@
 }
 
 .modalContainer {
-    display: flex;
-    position: relative;
-    flex-direction: column;
-    align-items: center;
-    width: 700px;
-    background-color: white;
-    border-radius: 6px;
-    padding: 30px 30px;
-    box-shadow: 0px 3px 10px #00000010;
+    width: 100%;
 
     .profileImg {
         width: 215px;
         height: 215px;
         position: relative;
-        background-color: white;
-        border: 11px solid white;
+        background-color: var(--boxBackground);
+        border: 11px solid var(--boxBackground);
         border-radius: 50%;
-        margin-top: -130px;
-        margin-bottom: 10px;
+        margin: 0px auto;
+        margin-bottom: -140px;
+        z-index: 10;
 
         img {
             border-radius: 50%;
@@ -40,41 +33,57 @@
         position: absolute;
         width: 10px;
         height: 10px;
-        top: 79px;
+        top: 76px;
         content: "";
-        background-color: #ededed;
+        background-color: var(--background);
         box-sizing: content-box;
     }
 
     .profileImg::before {
-        left: -18px;
+        left: -17px;
         border-bottom-right-radius: 12px;
-        box-shadow: 3px 3px 0 white;
+        box-shadow: 3px 3px 0 var(--boxBackground);
     }
 
     .profileImg::after {
-        right: -18px;
+        right: -17px;
         border-bottom-left-radius: 12px;
-        box-shadow: -3px 3px 0 white;
+        box-shadow: -3px 3px 0 var(--boxBackground);
     }
 
-    .title {
-        color: #2d2d2d;
-        font-weight: 700;
-        margin: 6px 0px;
-    }
-
-    .description {
-        color: #717171;
-        font-weight: 100;
-        margin: 6px 0px;
-    }
+    .contentContainer {
+        display: flex;
+        position: relative;
+        margin: 0px auto;
+        margin-bottom: 0px;
+        flex-direction: column;
+        align-items: center;
+        width: 700px;
+        background-color: var(--boxBackground);
+        border-radius: 6px;
+        padding: 140px 30px 20px 30px;
+        box-sizing: border-box;
+        box-shadow: 0px 3px 10px #00000010;
+    
+        .title {
+            color: var(--textBlack);
+            font-weight: 700;
+            margin: 6px 0px;
+        }
+    
+        .description {
+            color: var(--textGray);
+            font-weight: 100;
+            margin: 6px 0px;
+        }
+    }    
 }
 
 .input {
     width: 100%;
     text-align: center;
-    background-color: #f5f5f5;
+    color: var(--textBlack);
+    background-color: var(--inputBackground);
     border-radius: 6px;
     border: none;
     padding: 12px 0px;
@@ -103,20 +112,19 @@
 .submit {
     width: 100%;
     font-size: 20px;
-    color: #009ee3;
-    background-color: #e3edfb;
+    color: var(--buttonText);
+    background-color: var(--buttonBackground);
     border: none;
     border-radius: 6px;
-    padding: 12px 32px;
+    padding: 8px 32px;
     margin-top: 10px;
     box-sizing: border-box;
     cursor: pointer;
 }
 
 .submit:active {
-    border: 1px solid #009ee3;
-    background-color: #e3edfb;
-    padding: 11px 32px;
+    border: 1px solid var(--borderButton);
+    padding: 7px 32px;
 }
 
 .redirect {
@@ -131,7 +139,13 @@
 
 @media only screen and (max-width: 768px) {
     .modalContainer {
-        border-radius: 0px;
-        padding: 30px 15px;
+        width: 100%;
+        margin-top: -80px;
+
+        .contentContainer {
+            width: 100%;
+            border-radius: 0px;
+            padding: 140px 15px 20px 15px;
+        }
     }
 }
